# short-link

./: CLAUDE.md  LICENSE  README.md
backend/: .env  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  links.py
backend/app/services/: auth_service.py  link_service.py
backend/tests/: conftest.py  test_auth.py  test_links.py
docs/superpowers/plans/: 2026-04-29-short-link-plan.md
docs/superpowers/specs/: 2026-04-29-short-link-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: auth.ts  client.ts  links.ts
frontend/src/pages/: BatchManage.tsx  CreateLink.tsx  LinkDetail.tsx  LinkList.tsx  Login.tsx  Register.tsx
frontend/src/styles/: cyberpunk.css  rain-night.css
