[project]
name = "short-link-backend"
version = "1.0.0"
description = "Short Link Management System Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "sqlalchemy==2.0.35",
    "aiomysql==0.2.0",
    "greenlet>=3.0.0",
    "pydantic==2.9.0",
    "pydantic-settings==2.5.0",
    "python-jose[cryptography]==3.3.0",
    "bcrypt>=4.0.0,<5.0.0",
    "python-multipart==0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.0",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
